BACKLOG-21954 Fix startup issues with JDK 17 (#626)